--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,34 @@
-version: '3.7'
-services:
+version: "3.7"
 
+services:
   nodered:
-    depends_on:
-      - mosquitto
-    container_name: nodered  
-    image: nodered/node-red:latest
+    image: nodered/node-red
+    container_name: nodered
+    restart: always
+    volumes:
+      - ./volumes/nodered_data:/data
     ports:
       - "1880:1880"
-    restart: always
-    volumes:
-      - ~/volumes/docker/nodered/node_red_data:/data
 
-  mosquitto:
-    container_name: mqtt
-    image: eclipse-mosquitto
-    volumes:
-      - ~/volume/docker/mqtt/data:/mosquitto/data
-      - ~/volume/docker/mqtt/log:/mosquitto/log
-      - ~/volume/docker/mqtt/config:/mosquitto/config
-    restart: always
-
-  
   influxdb:
-    container_name: influxdb
     image: influxdb:1.8
+    container_name: influxdb
+    restart: always
+    volumes:
+      - ./volumes/influxdb:/data
     ports:
       - "8086:8086"
-    volumes:
-      - /home/allinedomingos/influxdb_data:/influxdb
-    environment:
-      - INFLUXDB_DB=db
-      - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=admin
-    restart: always
-      
+
   grafana:
     depends_on:
       - influxdb
-    container_name: grafana  
     image: grafana/grafana
+    container_name: grafana
+    restart: always
+    volumes:
+      - ./volumes/grafana:/data
     ports:
       - "3000:3000"
-    volumes:
-      - ~/volumes/docker/grafana/grafana_data:/grafana 
+    environment:
+      - GF_USER=admin
+      - GF_PASS=admin
